# ralphx.app

./: .claude  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  IMPLEMENTATION_STATUS.md  LICENSE  MEMORY_FRAMEWORK_TEST_COVERAGE.md  PROMPT.md  README.md  TASK_README.md  codecov.yml  dev-fresh  eslint.config.js  node_modules  package-lock.json  package.json  playwright.config.ts  ralph-orchestrator.sh  ralph-streams.sh  ralph-tmux-status.sh  ralph-tmux.sh  ralph.sh  ralphx.yaml  rollback_backup.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: CLAUDE.md  Cargo.toml  manual_agent_teams_process.txt  ralphx.yaml  target  tauri.conf.json
src-tauri/.config/: nextest.toml
src-tauri/capabilities/: default.json
src-tauri/crates/ralphx-domain/: Cargo.toml
src-tauri/crates/ralphx-domain/src/: error.rs  error_tests.rs  lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  error_tests.rs  http_server.rs  lib.rs  main.rs  utils.rs
src-tauri/src/application/: agent_client_bundle.rs  agent_conversation_workspace.rs  agent_lane_resolution.rs  agent_lane_resolution_tests.rs  agent_lane_settings_bootstrap.rs  agent_lane_settings_bootstrap_tests.rs  agent_terminal.rs  agent_terminal_tests.rs  agent_workspace_bridge.rs  app_setup.rs  app_state.rs  app_state_shared_state_tests.rs  app_state_tests.rs  apply_service.rs  chat_attachment_service.rs  chat_attachment_service_tests.rs  chat_attribution_backfill_service.rs  chat_attribution_backfill_transcript.rs  chat_resumption.rs  chat_resumption_tests.rs  chat_service.rs  chat_service_output_tests.rs  dependency_service.rs  diff_service.rs  diff_service_tests.rs  event_cleanup_service.rs  execution_chat_service.rs  execution_settings_bootstrap.rs  execution_settings_bootstrap_tests.rs  git_service.rs  harness_runtime_registry.rs  ideation_effort_bootstrap.rs  ideation_effort_bootstrap_tests.rs  ideation_harness_availability.rs  ideation_harness_availability_tests.rs  ideation_lane_settings_compat.rs  ideation_model_bootstrap.rs  ideation_model_bootstrap_tests.rs  ideation_service.rs  ideation_workspace.rs  (+74 more)
src-tauri/src/application/apply_service/: helpers.rs  mod.rs  tests.rs  types.rs
src-tauri/src/application/chat_service/: chat_service_context.rs  chat_service_context_tests.rs  chat_service_errors.rs  chat_service_errors_tests.rs  chat_service_handlers.rs  chat_service_handlers_tests.rs  chat_service_helpers.rs  chat_service_helpers_tests.rs  chat_service_merge.rs  chat_service_merge_tests.rs  chat_service_mock.rs  chat_service_queue.rs  chat_service_recovery.rs  chat_service_recovery_tests.rs  chat_service_redaction_tests.rs  chat_service_replay.rs  chat_service_replay_tests.rs  chat_service_repository.rs  chat_service_repository_tests.rs  chat_service_send_background.rs  chat_service_send_background_tests.rs  freshness_routing.rs  (+11 more)
src-tauri/src/commands/: activity_commands.rs  activity_commands_tests.rs  agent_model_commands.rs  agent_profile_commands.rs  agent_profile_commands_tests.rs  agent_terminal_commands.rs  api_key_commands.rs  api_key_commands_tests.rs  artifact_commands.rs  artifact_commands_tests.rs  branch_helpers.rs  branch_helpers_tests.rs  chat_attachment_commands.rs  chat_attachment_commands_tests.rs  chat_responses.rs  context_chat_commands.rs  conversation_stats_commands.rs  design_artifact_commands.rs  design_artifact_persistence.rs  design_commands.rs  design_feedback_commands.rs  diagnostic_commands.rs  diff_commands.rs  execution_chat_commands.rs  execution_commands.rs  execution_commands_running_count_tests.rs  external_mcp_commands.rs  external_mcp_commands_tests.rs  git_commands.rs  git_commands_tests.rs  health.rs  health_tests.rs  ideation_commands.rs  merge_pipeline_commands.rs  methodology_commands.rs  methodology_commands_tests.rs  metrics_commands.rs  metrics_commands_tests.rs  metrics_queries.rs  metrics_trends.rs  (+38 more)
src-tauri/src/domain/: mod.rs
src-tauri/src/http_server/: delegation.rs  helpers.rs  helpers_tests.rs  mod.rs  project_scope.rs  project_scope_tests.rs  types.rs
src-tauri/src/infrastructure/: external_mcp_supervisor.rs  external_mcp_supervisor_tests.rs  git_auth.rs  mod.rs  tool_paths.rs  webhook_http_client.rs  webhook_http_client_tests.rs  webhook_publisher.rs  webhook_publisher_tests.rs
src-tauri/src/testing/: mod.rs  sqlite_test_db.rs  test_prompts.rs  test_prompts_tests.rs
src-tauri/src/tests/: accept_lifecycle_tests.rs  backend_endpoint_tests.rs  gh_cli_github_service_tests.rs  health_endpoint_tests.rs  lib_shutdown_tests.rs  mock_github_service.rs  mod.rs  verification_loop_integration_tests.rs
src-tauri/src/utils/: backend_endpoint.rs  design_source_manifest.rs  design_storage_paths.rs  mod.rs  path_safety.rs  redacting_writer.rs  redacting_writer_tests.rs  runtime_log_paths.rs  secret_redactor.rs  secret_redactor_tests.rs
src-tauri/tests/: PERFORMANCE_RESULTS.md  activity_commands.rs  agent_profile_commands.rs  agent_workspace_repair_auto_publish.rs  agentic_client_flows.rs  api_key_commands.rs  api_keys_handlers.rs  apply_service.rs  artifact_commands.rs  artifact_integration.rs  artifacts_handlers.rs  chat_attribution_backfill_service.rs  chat_service_context.rs  chat_service_errors.rs  chat_service_merge.rs  chat_service_pause_flows.rs  chat_service_streaming.rs  chat_session_recovery_integration.rs  codex_cli_capabilities.rs  codex_stream_processor.rs  conversation_stats_commands.rs  conversations_handlers.rs  deferred_main_merge_integration.rs  delegation_handlers.rs  execution_commands_running_count.rs  execution_control_flows.rs  execution_types_serde.rs  external_handlers.rs  external_ideation_runtime_handlers.rs  gate1_ipr_fast_path_tests.rs  git_commands.rs  git_handlers.rs  gsd_integration.rs  http_helpers.rs  ideation_capacity_counting.rs  ideation_commands.rs  ideation_event_emission.rs  ideation_handlers.rs  ideation_model_override.rs  ideation_plan_delivery_test.rs  (+62 more)
src-tauri/tests/common/: mod.rs
src-tauri/tests/fixtures/: verification_event.json
src-tauri/tests/support/: mod.rs  real_git_repo.rs
(+4344 files in other folders)
