[package]
name = "ralphx"
version = "0.4.0"
description = "RalphX - Autonomous AI-driven development GUI"
authors = ["RalphX Team"]
edition = "2021"

[workspace]
members = ["crates/ralphx-domain"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ralphx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["devtools", "test", "macos-private-api"] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full", "process"] }
statig = { version = "0.3", features = ["async"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-appender = "0.2"
futures = "0.3"
which = "7"
lazy_static = "1.5"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-window-state = "2.4.1"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
tauri-plugin-fs = "2.5.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
sha2 = "0.10"
tokio-util = "0.7"
dashmap = "6"
scopeguard = "1"
dotenvy = "0.15.7"
dirs = "6"
rand = "0.8"
nix = { version = "0.29", features = ["signal", "process"] }
tempfile = "3"
regex = { version = "1", default-features = false, features = ["std", "perf"] }
ralphx-domain = { path = "crates/ralphx-domain" }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
hmac = "0.12"
http-body-util = "0.1"
portable-pty = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
tower = { version = "0.4", features = ["util"] }

[lints.clippy]
# Elevated to deny — catches real null-dereference bugs
unnecessary_unwrap = "deny"
# Known lints from Rust 1.93 upgrade — documented as accepted
manual_is_multiple_of = "warn"
cloned_ref_to_slice_refs = "warn"
manual_contains = "warn"
io_other_error = "warn"

[profile.release]
lto = true
opt-level = "s"
strip = true
codegen-units = 1
