[package]
name = "ralphx-domain"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
lazy_static = "1.5"
tokio = { version = "1", features = ["macros", "process", "rt"] }
which = "7"
