[package]
name = "ralphx-domain"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
futures = "0.3"
rusqlite = { version = "0.32" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
lazy_static = "1.5"
tokio = { version = "1", features = ["macros", "process", "rt"] }
which = "7"

[lints.clippy]
# Allowed lints consistent with root crate policy (see src-tauri/CLAUDE.md "Allowed Clippy Lints")
derivable_impls = "allow"
redundant_closure = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
unnecessary_literal_unwrap = "allow"
bool_comparison = "allow"
useless_vec = "allow"
let_and_return = "allow"
